# emprega-vale

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml
backend/: Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  settings.toml  v8_to_v9.go
backend/config/: config.go
backend/database/: database.go
backend/emprega_vale/api/: auth.py
backend/emprega_vale/contrib/: auth.py
backend/emprega_vale/crud/: __init__.py
backend/emprega_vale/db/: base_class.py  session.py
backend/emprega_vale/models/: __init__.py  auth.py  group.py
backend/emprega_vale/schemas/: __init__.py  login.py  user.py
backend/emprega_vale/tests/: conftest.py
backend/handlers/: auth.go
backend/middleware/: auth.go
backend/models/: base.go  groups.go  users.go
backend/router/: router.go
backend/utils/: auth.go  response.go  validations.go
emprega_vale/: app.py  config.py  database.py
emprega_vale/api/: __init__.py  auth.py  dependencies.py
emprega_vale/contrib/: calculations.py  utils.py
emprega_vale/crud/: __init__.py  base.py  crud_login.py  crud_user.py
emprega_vale/db/: __init__.py  base_class.py
emprega_vale/models/: __init__.py  login.py
emprega_vale/schemas/: __init__.py  login.py
emprega_vale/tests/crud/: test_login.py
frontend/: Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/nginx/: nginx.conf
frontend/public/: index.html  index.pug
frontend/src/: App.vue  main.ts
frontend/src/components/: HelloWorld.vue  (+1 more)
migrations/: env.py
migrations/versions/: ebbfcb0fff19_.py
(+5 files in other folders)
