[tool.poetry]
name = "emprega-vale"
version = "0.1.0"
description = ""
authors = ["Marcelo Lino <mdslino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
authlib = "^0.14.3"
fastapi = "^0.59.0"
pydantic = {extras = ["email"], version = "^1.6"}
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
sqlalchemy = "^1.3.18"
dynaconf = "^3.0.0"
orjson = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
